fixed contactUs form response

--- a/src/pages/contact_us.html
+++ b/src/pages/contact_us.html
@@ -23,6 +23,7 @@
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="../styles/styles.css" />
     <script src="../scripts/main.js"></script>
     <title>Contact US</title>
@@ -101,7 +102,7 @@
             <h1 class="my-5 text-white fw-bold">Contact Us</h1>
             <p class="text-light">Get in touch</p>
           </div>
-          <form class="d-grid bg w-50" action="" method="post">
+          <form class="d-grid bg w-50" id="contactUsForm">
             <fieldset>
               <label class="text-light" for="name">Name</label>
               <input
